# hack-portfolio

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  vercel-build.sh  vercel-install.sh
public/: index.html
public/*/: index.html
public/assets/: address_image-0b99e666bb740e74.svg.br  blogs_image-fa5daebffd410a8d.svg.br  career-dc30783acd306f59.css  career-dc30783acd306f59.css.br  certification_card-acbefd5d3f8fc9e4.css  certification_card-acbefd5d3f8fc9e4.css.br  cg_img-6a271e4b4fd49ce3.png.br  confidential-28f86e1ff65e87ef.jpg.br  contact-c7f4f5b0c347d9d8.css  contact-c7f4f5b0c347d9d8.css.br  cv-1bd7b34a36affdb1.svg.br  deeplearning_ai_logo-3f779cadc3017548.png.br  degree_card-9e49017c4d6f2f10.css  degree_card-9e49017c4d6f2f10.css.br  education-c6135882ed03d566.css  education-c6135882ed03d566.css.br  experience_card-3a08c084510cd0e4.css  experience_card-3a08c084510cd0e4.css.br  github_repo_card-87e9268ce80819f7.css  github_repo_card-87e9268ce80819f7.css.br  global-370b46faa234787b.css  global-370b46faa234787b.css.br  hack-portfolio-c7afd5b5af041ba5.js  hack-portfolio-c7afd5b5af041ba5.js.br  hack-portfolio_bg-6f9b283af906027d.wasm  hack-portfolio_bg-6f9b283af906027d.wasm.br  home-2a53b862b8f1d918.css  home-2a53b862b8f1d918.css.br  main-1a097a5000059b7e.css  main-1a097a5000059b7e.css.br  navbar-020c2d569cc45972.css  navbar-020c2d569cc45972.css.br  projects-7de8a099ecf540f0.css  projects-7de8a099ecf540f0.css.br  social_media-b0d977735d430202.css  social_media-b0d977735d430202.css.br
public/career/: index.html
src/: data.rs  global.css  main.css  main.rs
(+33 files in other folders)
